<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/color3"
        android:gravity="center">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@color/color2"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/color1"
                android:elevation="15dp"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/masukan_catatan"
                android:textColor="@color/black"
                android:textSize="19sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/inputTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/shape_background"
                android:hint="@string/masukkan_judul"
                android:inputType="textPersonName"
                android:padding="15dp"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                android:autofillHints="" />


            <EditText
                android:id="@+id/inputNote"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/shape_background"
                android:hint="@string/masukkan_catatan"
                android:padding="15dp"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                android:autofillHints=""
                android:inputType="text" />

            <Button
                android:id="@+id/btnInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:backgroundTint="@color/black"
                android:text="@string/masukan" />


        </LinearLayout>

    </LinearLayout>
</layout>